@@ -84,6 +84,11 @@ split_labels <- function(splits, drop, id = plyr::id(splits, drop = TRUE)) {
 }
 
 ulevels <- function(x) {
-  if (is.factor(x)) return(levels(x))
-  sort(unique(x))
+  if (is.factor(x)) {
+    levs <- levels(x)
+    factor(levs, levels = levs)
+  } else {
+    sort(unique(x))
+  }
+
 }
